--- a/index.html
+++ b/index.html
@@ -5,39 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="carousel.css">
   <title>캐러셀</title>
-  <style>
-    body {
-      overflow: hidden;
-    }
-
-    .slide-container {
-      width: 300vw;
-      transition: all 0.5s;
-    }
-
-    .slide {
-      float: left;
-      width: 100vw;
-      text-align: center;
-    }
-
-    .slide img {
-      width: 50%;
-    }
-
-    .btn-container {
-      text-align: center;
-    }
-
-    .slide-btn {
-      padding: 4px 30px;
-      border-radius: 20px;
-      border: none;
-      background-color: #479dda;
-      margin-top: 10px;
-    }
-  </style>
 </head>
 
 <body>
@@ -65,34 +34,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script>
-    let position = 0;
-
-    $('.slide-btn').on('click', function (e) {
-      let dataset = e.target.dataset.num;
-
-      if (dataset == '-1') {
-        if (position > 0) {
-          position--;
-          $('.slide-container').css('transform', `translateX(-${position * 100}vw)`);
-        }else{
-          position = $('.slide').length - 1
-          $('.slide-container').css('transform', `translateX(-${position * 100}vw)`);
-        }
-      } else if (dataset == '+1') {
-        if (position < $('.slide').length - 1) {
-          position++;
-          $('.slide-container').css('transform', `translateX(-${position * 100}vw)`);
-        }else{
-          position = 0;
-          $('.slide-container').css('transform', `translateX(-${position * 100}vw)`);
-        }
-      } else {
-        $('.slide-container').css('transform', `translateX(-${dataset * 100}vw)`);
-        position = dataset;
-      }
-    })
-  </script>
+  <script src="carousel.js"></script>
 </body>
 
 </html>
